--- a/pages/category/index.less
+++ b/pages/category/index.less
@@ -14,7 +14,7 @@ page{
         width: 100%;
         display: flex;
         .left_menu{
-            flex: 2; 
+            width: 25%;
            .menu_item{
             height: 80rpx;
             display: flex;
@@ -24,7 +24,8 @@ page{
            }
         }
         .right_content{
-            flex:5;
+            width: 75%;
+            //右上
             .content_top{
                 padding: 15rpx 10rpx;
                 border-bottom: 1rpx solid #aca9a7;
@@ -42,15 +43,36 @@ page{
                     padding: 4rpx 10rpx;
                 }
             }
+            //右下
             .content_shop{
-                display: flex;
-                width: 200rpx;
-                .content_shop_image{
-                    width: 50rpx;
-                    height: 50rpx;
-                    image{
-                        width: 100%;
-                        height: 100%;
+                box-sizing: border-box;
+                width: 100%;
+                .shoplist_title{
+                    padding: 20rpx;
+                }
+                .content_shoplist{
+                    width: 100%;
+                    display: flex;
+                    flex-wrap: wrap;//设置项目是否在一条线上，默认为nowrap
+                    //flex-wrap: wrap | nowrap | wrap-reverse
+                    .shoplist{
+                        margin: 0;
+                        position: relative;
+                        width: 50%;
+                        height: 400rpx;
+                        border: 2rpx solid red;
+                        .shop_image{
+                            width: 90%;
+                            margin: 0 auto;
+                            image{
+                                width: 100%;
+                            }
+                        }
+                        .shop_content{
+                            padding: 0 20rpx;
+                            display: flex;
+                            flex-direction: column;
+                        }
                     }
                 }
             }
