--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -15,7 +15,7 @@ page {
   display: flex;
 }
 .cates .cates_container .left_menu {
-  flex: 2;
+  width: 25%;
 }
 .cates .cates_container .left_menu .menu_item {
   height: 80rpx;
@@ -25,7 +25,7 @@ page {
   font-size: 30rpx;
 }
 .cates .cates_container .right_content {
-  flex: 5;
+  width: 75%;
 }
 .cates .cates_container .right_content .content_top {
   padding: 15rpx 10rpx;
@@ -42,14 +42,33 @@ page {
   padding: 4rpx 10rpx;
 }
 .cates .cates_container .right_content .content_shop {
-  display: flex;
-  width: 200rpx;
-}
-.cates .cates_container .right_content .content_shop .content_shop_image {
-  width: 50rpx;
-  height: 50rpx;
-}
-.cates .cates_container .right_content .content_shop .content_shop_image image {
+  box-sizing: border-box;
   width: 100%;
-  height: 100%;
+}
+.cates .cates_container .right_content .content_shop .shoplist_title {
+  padding: 20rpx;
+}
+.cates .cates_container .right_content .content_shop .content_shoplist {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.cates .cates_container .right_content .content_shop .content_shoplist .shoplist {
+  margin: 0;
+  position: relative;
+  width: 50%;
+  height: 400rpx;
+  border: 2rpx solid red;
+}
+.cates .cates_container .right_content .content_shop .content_shoplist .shoplist .shop_image {
+  width: 90%;
+  margin: 0 auto;
+}
+.cates .cates_container .right_content .content_shop .content_shoplist .shoplist .shop_image image {
+  width: 100%;
+}
+.cates .cates_container .right_content .content_shop .content_shoplist .shoplist .shop_content {
+  padding: 0 20rpx;
+  display: flex;
+  flex-direction: column;
 }
