--- a/pages/goods_list/index.wxml
+++ b/pages/goods_list/index.wxml
@@ -1,2 +1,20 @@
 <!--pages/goods_list/index.wxml-->
-<text>pages/goods_list/index.wxml</text>
+<SearInput></SearInput>
+<!-- 监听自定义事件 -->
+<Tabs tabs="{{tabs}}" bindtabsItemChange="handleTabsItemChange">
+    <block wx:if="{{tabs[0].isActive}}">
+        <view class="first_tab">
+            <GoodsList GoodsList="{{goodsList}}"></GoodsList>
+        </view>
+    </block>
+    <block wx:elif="{{tabs[1].isActive}}">
+        <view class="first_tab">
+            <GoodsList GoodsList="{{goodsList}}"></GoodsList>
+        </view>
+    </block>
+    <block wx:elif="{{tabs[2].isActive}}">
+        <view class="first_tab">
+            <GoodsList GoodsList="{{goodsList}}"></GoodsList>
+        </view>
+    </block>
+</Tabs>
