--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -1,2 +1,59 @@
 <!--pages/cart/index.wxml-->
-<text>pages/cart/index.wxml</text>
+<!-- 收货地址 -->
+<view class="revice_addresss_row">
+    <view class="address_btn">
+        <button type="primary" plain="{{true}}">获取收货地址</button>
+    </view>
+</view>
+
+<view class="cart_content">
+    <view class="cart_title">购物车</view>
+    <view class="cart_main">
+        <view class="cart_item"
+        wx:for="{{cart}}"
+        wx:key="goods_id">
+            <!-- 复选框 -->
+            <view class="cart_chk_wrap">
+                <checkbox-group data-id="{{item.goods_id}}" bindchange="handItemChange"> 
+                    <checkbox checked="{{item.checked}}" /> 
+                </checkbox-group>
+            </view>
+            <!-- 图片 -->
+            <navigator  class="cart_img_wrap">
+                <image  mode="widthFix" src="{{item.image[0].image_src}}" />
+            </navigator>
+            <!-- 产品信息 -->
+            <view class="cart_info_wrap">
+                <view class="goods_name">{{item.name}}</view>
+                <view class="goods_price_warp">
+                    <view class="goods_price">￥{{item.price}}</view>
+                    <view class="cart_num_tool">
+                        <view class="mun_edit">-</view>
+                        <view class="goods_num">{{item.num}}</view>
+                        <view class="mun_edit">+</view>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </view>
+</view>
+
+<view class="footer_tool">
+    <!-- 全选 -->
+    <view class="all_chk_warp">
+        <checkbox-group >
+            <checkbox  checked="{{allChecked}}" />全选
+        </checkbox-group>
+    </view>
+    <!-- 总价格 -->
+    <view class="total_price_warp">
+        <view class="total_price">
+            合计：<text class="total_price_text">￥{{totalPrice}}</text>
+        </view>
+        <view >包含运费</view>
+    </view>
+    <!-- 结算 -->
+    <view class="order_pay-warp">
+        结算({{totalNum}})
+    </view>
+</view>
