--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -13,18 +13,18 @@
 .index_cate{
     display: flex;
     flex-wrap: wrap;
-    width: 750rpx;
-    height: 280rpx;
+    width: 100%;
+    height: 300rpx;
     navigator{
         padding: 10rpx;
         height: 50%;
         width: 20%;
         display: flex;
         flex-direction:column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         image{
-            width: 100rpx;
+            width: 90rpx;
             border-radius: 50%;
         }
         label{
